src/styles/graph.css
.selectors {
    background-color: #ffffff;
    padding: 10px 20px;
}

#teamSelector {
    display: flex;
    align-items: center;
    justify-content: center;

    .ReactTags__tags {
        min-width: 70%;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;

    }

    .ReactTags__selected {
        margin: 10px 5px;

        .ReactTags__tag {
            margin: 3px;
            padding: 10px;
            padding-left: 16px;
            background-color: var(--white-secondary);
            border-radius: 5px;

            button {
                margin-left: 10px;
                background-color: rgba(0, 0, 0, 0);
                border: none;
                svg {
                    fill: black
                }
                svg:hover {
                    fill: black;
                    cursor: pointer;
                }
            }
        }
    }

    .ReactTags__tagInput {
        margin-bottom: 10px;
        margin: 0 5px;
        width: 100%;
        display: flex;
        position: relative;

        input[type=text] {
            flex-grow: 100;
            padding: 12px 20px;
            margin: 8px 0;
            box-sizing: border-box;
        }
        button {
            width: 20%;
            padding: 12px 20px;
            margin: 8px 0;
            box-sizing: border-box;
        }

        .ReactTags__suggestions {
            float: none;
            position: absolute;
            background-color: #ffffff;
            border: 2px solid #000000;
            border-radius: 2px;
            width: 200px;
            transform: translate(0, 48px);
            z-index: 1;
            
            ul {
                margin: 5px 5px;
                padding: 0 0;
            }

            li {
                list-style: none;
                padding: 5px 10px;
            }
            
            li.ReactTags__activeSuggestion {
                list-style: none;
                cursor: pointer;
                padding: 5px 10px;
                background-color: var(--white-secondary);
   
            }
        }
    }
}

#epaSelector {
    display: flex;
    align-items: center;
    justify-content: center;
}

#graph {
    border-radius: 20px;
    margin-top: 10px;
    width: 100%;
    height: 50%;
}

